--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 :root {
   color-scheme: dark;
 }
@@ -19,7 +22,14 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-main {
-  width: min(90%, 90ch);
-  margin-inline: auto;
+button {
+  background: none;
+  border: none;
+  opacity: 0.4;
+  transition: all 150ms ease;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 1;
+  }
 }
